--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -6,7 +6,7 @@ metadata:
     labels:
       app: cicd-pipeline
       name: cicd-pipeline
-    name: demo-pipeline
+    name: phpdemo
 spec:
     triggers:
       - type: GitHub
