Changed check from dc to bc

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -63,7 +63,7 @@ spec:
                     expression {
                       openshift.withCluster() {
                         openshift.withProject() {
-                          return !openshift.selector('dc', 'phpdemo').exists()
+                          return !openshift.selector('bc', 'phpdemo').exists()
                         }
                       }
                     }
